--- a/manifest.json
+++ b/manifest.json
@@ -9,7 +9,7 @@
     "background_color": "#FFFFFF",
     "icons": [
         {
-            "src": "./solicitud.png",
+            "src": "./Arturo-Wibawa-Akar-Icon.512.png",
             "sizes": "192x192",
             "type": "image/png"
         },
