--- a/manifest.json
+++ b/manifest.json
@@ -9,31 +9,31 @@
     "background_color": "#FFFFFF",
     "icons": [
         {
-            "src": "./Arturo-Wibawa-Akar-Icon.512.png",
+            "src": "build/image/Arturo-Wibawa-Akar-Icon.512.png",
             "sizes": "192x192",
             "type": "image/png"
         },
         {
-            "src": "./television-inteligente.png",
+            "src": "build/image/television-inteligente.png",
             "sizes": "512x512",
             "type": "image/png"
         }
     ],
     "screenshots": [
         {
-           "src": "./screenshot1.png",
+           "src": "build/image/screenshot1.png",
             "sizes": "1280x720",
             "type": "image/png",
             "form_factor": "wide"
         },
         {
-           "src": "./screenshot2.png",
+           "src": "build/image/screenshot2.png",
             "sizes": "720x1280",
             "type": "image/png",
             "form_factor": "narrow"
         },
         {
-            "src": "./screenshot3.png",
+            "src": "build/image/screenshot3.png",
             "sizes": "1440x900",
             "type": "image/png",
             "form_factor": "wide"
