--- a/manifest.json
+++ b/manifest.json
@@ -1,42 +1,42 @@
 {
-    "short_name": "PWA",
-    "name": "Offline App",
-    "description": "Esta es una aplicación Offline instalable, una PWA",
-    "display": "standalone",
-    "scope":"./",
-    "start_url": "./",
-    "theme_color": "#3F51B5",
-    "background_color": "#FFFFFF",
-    "icons": [
-        {
-            "src": "build/image/Arturo-Wibawa-Akar-Icon.512.png",
-            "sizes": "192x192",
-            "type": "image/png"
-        },
-        {
-            "src": "build/image/television-inteligente.png",
-            "sizes": "512x512",
-            "type": "image/png"
-        }
-    ],
-    "screenshots": [
-        {
-           "src": "build/image/screenshot1.png",
-            "sizes": "1280x720",
-            "type": "image/png",
-            "form_factor": "wide"
-        },
-        {
-           "src": "build/image/screenshot2.png",
-            "sizes": "720x1280",
-            "type": "image/png",
-            "form_factor": "narrow"
-        },
-        {
-            "src": "build/image/screenshot3.png",
-            "sizes": "1440x900",
-            "type": "image/png",
-            "form_factor": "wide"
-        }
-    ]
+  "name": "To Do List",
+  "short_name": "ToDo",
+  "description": "Aplicación de lista de tareas",
+  "start_url": "/index.html",
+  "display": "standalone",
+  "background_color": "#FFFFFF",
+  "theme_color": "#4CAF50",
+  "orientation": "portrait",
+  "icons": [
+    {
+      "src": "/icons/icon-48x48.png",
+      "sizes": "48x48",
+      "type": "image/png"
+    },
+    {
+      "src": "/icons/icon-72x72.png",
+      "sizes": "72x72",
+      "type": "image/png"
+    },
+    {
+      "src": "/icons/icon-96x96.png",
+      "sizes": "96x96",
+      "type": "image/png"
+    },
+    {
+      "src": "/icons/icon-144x144.png",
+      "sizes": "144x144",
+      "type": "image/png"
+    },
+    {
+      "src": "/icons/icon-192x192.png",
+      "sizes": "192x192",
+      "type": "image/png"
+    },
+    {
+      "src": "/icons/icon-512x512.png",
+      "sizes": "512x512",
+      "type": "image/png"
+    }
+  ]
 }
