--- a/manifest.json
+++ b/manifest.json
@@ -9,7 +9,7 @@
   "orientation": "portrait",
   "icons": [
     {
-      "src": "/icons/descarga01.png",
+      "src": "/icons/descarga01-48x48.png",
       "sizes": "48x48",
       "type": "image/png"
     },
