--- a/manifest.json
+++ b/manifest.json
@@ -9,45 +9,45 @@
   "orientation": "portrait",
   "icons": [
     {
-      "src": "/icons/descarga01-48x48.png",
+      "src": "https://thelightmishaax.github.io/icons/actualizar-48x48.png",
       "sizes": "48x48",
       "type": "image/png"
     },
     {
-      "src": "/icons/icon-72x72.png",
+      "src": "https://thelightmishaax.github.io/icons/ajustes-72x72.png",
       "sizes": "72x72",
       "type": "image/png"
     },
     {
-      "src": "/icons/icon-96x96.png",
+      "src": "https://thelightmishaax.github.io/icons/comprobacion-96x96.png",
       "sizes": "96x96",
       "type": "image/png"
     },
     {
-      "src": "/icons/icon-144x144.png",
+      "src": "https://thelightmishaax.github.io/icons/controlar-144x144.png",
       "sizes": "144x144",
       "type": "image/png"
     },
     {
-      "src": "/icons/icon-192x192.png",
+      "src": "https://thelightmishaax.github.io/icons/descargar-192x192.png",
       "sizes": "192x192",
       "type": "image/png"
     },
     {
-      "src": "/icons/icon-512x512.png",
+      "src": "https://thelightmishaax.github.io/icons/mas-512x512.png",
       "sizes": "512x512",
       "type": "image/png"
     }
   ],
   "screenshots": [
     {
-      "src": "/icons/screenshot-wide.png",
+      "src": "https://thelightmishaax.github.io/icons/wide.png",
       "sizes": "1280x720",
       "type": "image/png",
       "form_factor": "wide"
     },
     {
-      "src": "/icons/screenshot-mobile.png",
+      "src": "https://thelightmishaax.github.io/icons/mobile.png",
       "sizes": "640x960",
       "type": "image/png"
     }
