--- a/manifest.json
+++ b/manifest.json
@@ -9,32 +9,32 @@
   "orientation": "portrait",
   "icons": [
     {
-      "src": "https://thelightmishaax.github.io/icons/actualizar-48x48.png",
+      "src": "https://thelightmishaax.github.io/icons/actualizar.png",
       "sizes": "48x48",
       "type": "image/png"
     },
     {
-      "src": "https://thelightmishaax.github.io/icons/ajustes-72x72.png",
+      "src": "https://thelightmishaax.github.io/icons/ajustes.png",
       "sizes": "72x72",
       "type": "image/png"
     },
     {
-      "src": "https://thelightmishaax.github.io/icons/comprobacion-96x96.png",
+      "src": "https://thelightmishaax.github.io/icons/comprobacion.png",
       "sizes": "96x96",
       "type": "image/png"
     },
     {
-      "src": "https://thelightmishaax.github.io/icons/controlar-144x144.png",
+      "src": "https://thelightmishaax.github.io/icons/controlar.png",
       "sizes": "144x144",
       "type": "image/png"
     },
     {
-      "src": "https://thelightmishaax.github.io/icons/descargar-192x192.png",
+      "src": "https://thelightmishaax.github.io/icons/descargar.png",
       "sizes": "192x192",
       "type": "image/png"
     },
     {
-      "src": "https://thelightmishaax.github.io/icons/mas-512x512.png",
+      "src": "https://thelightmishaax.github.io/icons/mas.png",
       "sizes": "512x512",
       "type": "image/png"
     }
