--- a/manifest.json
+++ b/manifest.json
@@ -19,7 +19,7 @@
       "type": "image/png"
     },
     {
-      "src": "https://thelightmishaax.github.io/icons/comprobar.jpg",
+      "src": "https://thelightmishaax.github.io/icons/comprobar.png",
       "sizes": "96x96",
       "type": "image/png"
     },
