--- a/manifest.json
+++ b/manifest.json
@@ -14,40 +14,40 @@
       "type": "image/png"
     },
     {
-      "src": "/index.html/icons/ajustes.png",
+      "src": "/SERVIDOR/icons/ajustes.png",
       "sizes": "72x72",
       "type": "image/png"
     },
     {
-      "src": "/index.html/icons/comprobar.jpg",
+      "src": "/SERVIDOR/icons/comprobar.jpg",
       "sizes": "96x96",
       "type": "image/png"
     },
     {
-      "src": "/index.html/icons/controlar.png",
+      "src": "/SERVIDOR/icons/controlar.png",
       "sizes": "144x144",
       "type": "image/png"
     },
     {
-      "src": "/index.html/icons/descargar.png",
+      "src": "/SERVIDOR/icons/descargar.png",
       "sizes": "192x192",
       "type": "image/png"
     },
     {
-      "src": "/index.html/icons/mas.png",
+      "src": "/SERVIDOR/icons/mas.png",
       "sizes": "512x512",
       "type": "image/png"
     }
   ],
   "screenshots": [
     {
-      "src": "/index.html/icons/wide.png",
+      "src": "/SERVIDOR/icons/wide.png",
       "sizes": "1280x720",
       "type": "image/png",
       "form_factor": "wide"
     },
     {
-      "src": "/index.html/icons/mobile.png",
+      "src": "/SERVIDOR/icons/mobile.png",
       "sizes": "640x960",
       "type": "image/png"
     }
