--- a/manifest.json
+++ b/manifest.json
@@ -11,45 +11,45 @@
     {
       "src": "/SERVIDOR/icons/actualizar.jpg",
       "sizes": "48x48",
-      "type": "image/png"
+      "type": "image/jpg"
     },
     {
       "src": "/SERVIDOR/icons/ajustes.jpg",
       "sizes": "72x72",
-      "type": "image/png"
+      "type": "image/jpg"
     },
     {
       "src": "/SERVIDOR/icons/comprobar.jpg",
       "sizes": "96x96",
-      "type": "image/png"
+      "type": "image/jpg"
     },
     {
       "src": "/SERVIDOR/icons/controlar.png",
       "sizes": "144x144",
-      "type": "image/png"
+      "type": "image/jpg"
     },
     {
       "src": "/SERVIDOR/icons/descargar.png",
       "sizes": "192x192",
-      "type": "image/png"
+      "type": "image/jpg"
     },
     {
       "src": "/SERVIDOR/icons/mas.png",
       "sizes": "512x512",
-      "type": "image/png"
+      "type": "image/jpg"
     }
   ],
   "screenshots": [
     {
       "src": "/SERVIDOR/icons/wide.png",
       "sizes": "1280x720",
-      "type": "image/png",
+      "type": "image/jpg",
       "form_factor": "wide"
     },
     {
       "src": "/SERVIDOR/icons/mobile.png",
       "sizes": "640x960",
-      "type": "image/png"
+      "type": "image/jpg"
     }
   ]
 }
