--- a/manifest.json
+++ b/manifest.json
@@ -14,7 +14,7 @@
       "type": "image/jpg"
     },
     {
-      "src": "/SERVIDOR/icons/ajustes.jpg",
+      "src": "/SERVIDOR/icons/ajustes1.jpg",
       "sizes": "72x72",
       "type": "image/jpg"
     },
