--- a/manifest.json
+++ b/manifest.json
@@ -41,7 +41,7 @@
   ],
   "screenshots": [
     {
-      "src": "/SERVIDOR/icons/wide.png",
+      "src": "/SERVIDOR/icons/desktop.png",
       "sizes": "1280x720",
       "type": "image/jpg",
       "form_factor": "wide"
