--- a/manifest.json
+++ b/manifest.json
@@ -2,53 +2,54 @@
   "name": "To Do List",
   "short_name": "ToDo",
   "description": "Aplicación de lista de tareas",
-  "start_url": "/SERVIDOR/index.html",
+  "start_url": "./index.html",
   "display": "standalone",
   "background_color": "#FFFFFF",
   "theme_color": "#4CAF50",
   "orientation": "portrait",
   "icons": [
-  {
-    "src": "/icons/actualizar.jpg",
-    "sizes": "48x48",
-    "type": "image/jpg"
-  },
-  {
-    "src": "/icons/ajustes3.jpg",
-    "sizes": "72x72",
-    "type": "image/jpg"
-  },
-  {
-    "src": "/icons/comprobar.jpg",
-    "sizes": "96x96",
-    "type": "image/jpg"
-  },
-  {
-    "src": "/icons/controlar.jpg",
-    "sizes": "144x144",
-    "type": "image/jpg"
-  },
-  {
-    "src": "/icons/descargar.jpg",
-    "sizes": "192x192",
-    "type": "image/jpg"
-  },
-  {
-    "src": "/icons/mas.jpg",
-    "sizes": "512x512",
-    "type": "image/jpg"
-  }
-],
-"screenshots": [
-  {
-    "src": "/icons/desktop.png",
-    "sizes": "1280x720",
-    "type": "image/jpg",
-    "form_factor": "wide"
-  },
-  {
-    "src": "/icons/mobile.png",
-    "sizes": "640x960",
-    "type": "image/jpg"
-  }
-]
+    {
+      "src": "./icons/actualizar.jpg",
+      "sizes": "48x48",
+      "type": "image/jpeg"
+    },
+    {
+      "src": "./icons/ajustes3.jpg",
+      "sizes": "72x72",
+      "type": "image/jpeg"
+    },
+    {
+      "src": "./icons/comprobar.jpg",
+      "sizes": "96x96",
+      "type": "image/jpeg"
+    },
+    {
+      "src": "./icons/controlar.jpg",
+      "sizes": "144x144",
+      "type": "image/jpeg"
+    },
+    {
+      "src": "./icons/descargar.jpg",
+      "sizes": "192x192",
+      "type": "image/jpeg"
+    },
+    {
+      "src": "./icons/mas.jpg",
+      "sizes": "512x512",
+      "type": "image/jpeg"
+    }
+  ],
+  "screenshots": [
+    {
+      "src": "./icons/desktop.png",
+      "sizes": "1280x720",
+      "type": "image/png",
+      "form_factor": "wide"
+    },
+    {
+      "src": "./icons/mobile.png",
+      "sizes": "640x960",
+      "type": "image/png"
+    }
+  ]
+}
